--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -1,6 +1,6 @@
 \section{Etat au commencement du projet}
 -> Utilisation intensive de XML
--> Philosophier de nanoXXml et de DOM differente
+-> Philosophie de nanoXXml et de DOM differente
 -> -> DOM : Tout est noeud
 -> -> NanoXml : Base sur les tags (elements)
 \begin{verbatim}
