--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -2,7 +2,7 @@
 ~
 \vfill
 \begin{center}
-\textsc{\begin{LARGE}TP - Métadonnées, Métaprogrammation et Ingénierie des modèles\end{LARGE}}\\[1cm]
+\textsc{\begin{LARGE}Refactoring IzPack\end{LARGE}}\\[1cm]
 \end{center}
 \vfill
 \begin{minipage}{0.4\textwidth}
