partie 1, description izpack en cours

--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -1,9 +1,12 @@
 \section{Decription}
 IzPack est un generateur d'installeur d'application open-source cree en 2001 par Julien Ponge.
 \subsection{Generateur d'installeur}
-A partir d'une application et par l'ecriture d'un descripteur d'installation en XML, il est capable de generer un fichier d'installation cross-plateforme. Tout type de programme peut etre package, que ce soit une application C++, Java... Izpack permet la creation rapide d'installeur pour ces programmes.
+A partir d'une application cree, Izpack est capable de generer un installateur. Cet installateur pourra etre utilise pour deployer l'application sur n'importe quelle machine. L'interet d'Izpack reside dans le fait que cree une installation est souvent laborieux et n'apporte que peu de plus-value au programme. Izpack propose une solution pour creer cet installeur de maniere simple et universelle. 
+
+Izpack 
+Tout type de programme peut etre package, que ce soit une application C++, Java...
 \subsection{Open-source}
-Izpack est sous license Apache2. Une importante communaute s'est regroupee autour de ce projet qui a permit son evolution jusqu'a maintenant. 
+Izpack est sous license Apache2. Cette license permet l'acces au code source et l'utilisation du logicielle. Il est tout a fait possible de l'utiliser pour une application commerciale voire, de modifier les sources pour correspondre a ses besoins. Une importante communaute s'est regroupee autour de ce projet ce qui a permit son evolution jusqu'a maintenant.
 
 \subsection{Fonctionnalites}
 Izpack possede plusieurs fonctionnalites, nous allons en voir les principales:
