bits of work before school

--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -13,13 +13,6 @@ Chacun de ces tickets peut être assigné à un sprint.
 \subsection{Sprint}
 Un sprint est un ensemble de ticket à résoudre pour une date donnée. En général, la durée d'un sprint était de 2 semaines, parfois une. A chaque fin de sprint, une réunion était organisée pour discuter des résultats, des reports à effectuer ou des tickets à créer.
 \section{Gestionnaire de version}
-
-- GitHub : Gestionnaire de dépôt Git
--> Duplicat (fork) du projet
--> Travail collaboratif et ouvert 
--> Consultation de l'historique
--> Visionnage des branches
-
 Tout projet informatique se doit d'être sous gestionnaire de version. Sans compter que le fait que le projet soit open-source et actif provoquait des changements importants dans le code. Il fallait donc pouvoir travailler en parallèle aux changement opérer par les contributeurs et pour appliquer nos modifications le jour venus.
 
 Le dépôt de référence est un dépôt Subversion. Les contributeurs appliquent leurs modifications sur ce dépôt. Cependant, pour des raisons de facilité et pour ne pas perturber le développement, il a été décidé de travailler sur un fork Git.
@@ -38,9 +31,19 @@ Nous pouvions à tout moment synchroniser notre dépôt par rapport au dépôt d
 Cela permettait de préparer l'application de nos modifications de manière aisée. Tout ces dépôts sont hébergés sur GitHub.
 \subsection{GitHub}
 GitHub est une plateforme collaborative. Cette plateforme permet de créer, dupliquer, supprimer ou consulter des dépôts Git.
-Il est possible de choisir de donner les droits de commit à d'autres personnes sur nos dépôts. Toutes les réalisations faites sont ouvertes et disponibles à tout le monde.
-C'est à dire que tout le monde est libre de cloner ou de forker les projets présents sur GitHub.
-Cette plateforme permet d'avoir un dépôt de référence disponible 
+Il est possible de choisir de donner les droits de commit à d'autres personnes sur nos dépôts. Toutes les réalisations faites sont ouvertes et disponibles à tout le monde, c'est à dire que n'importe qui est libre de cloner ou de forker les projets présents sur GitHub.
+
+Cette plateforme a été choisi par Julien Ponge pour héberger son dépot. Nous nous sommes donc créés des comptes sur GitHub et l'avons dupliqué. L'utilisation d'un dépot public basé sur celui de Julien Ponge a permis non seulement de faciliter les mises à jour, mais également de lui permettre de suivre facilement notre travail.
+
+
+- GitHub : Gestionnaire de dépôt Git
+-> Duplicat (fork) du projet
+-> Travail collaboratif et ouvert 
+-> Consultation de l'historique
+-> Visionnage des branches
+
+
+
 \section{Outils de développement}
 \subsection{IntelliJ Idea}
 -> IDE spécialisée technologies Java
